--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -6,50 +6,68 @@
     android:layout_height="wrap_content"
     android:padding="10dp">
 
-    <ImageView
-        android:id="@+id/product_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp" />
-
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="197dp"
         android:layout_height="wrap_content"
-        android:orientation = "vertical">
-        <TextView
-            android:id="@+id/textview_product_id"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text = "ID:"
-            android:textSize="20sp"/>
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textview_product_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text = "Name:"
-            android:textSize="20sp"/>
+        <LinearLayout
+            android:layout_width="197dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textview_product_description"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text = "Description: "
-            android:textSize="20sp"/>
 
-        <TextView
-            android:id="@+id/textview_product_seller"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text = "Seller: "
-            android:textSize="20sp"/>
-        <TextView
-            android:id="@+id/textview_product_price"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text = "Price: "
-            android:textSize="20sp"/>
+            <TextView
+                android:id="@+id/textview_product_id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="ID:"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/textview_product_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Name:"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/textview_product_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Description: "
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/textview_product_seller"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Seller: "
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/textview_product_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Price: "
+                android:textSize="20sp" />
+
+
+        </LinearLayout>
 
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/product_image"
+        android:layout_width="46dp"
+        android:layout_height="64dp"
+        android:layout_margin="10dp"
+        app:srcCompat="@drawable/ic_android_black_24dp" />
+
+    <CheckBox
+        android:id="@+id/checkBox"
+        android:layout_width="71dp"
+        android:layout_height="83dp"
+        android:layout_weight="1" />
 </LinearLayout>
