--- a/app/src/main/res/layout/selected_products_activity.xml
+++ b/app/src/main/res/layout/selected_products_activity.xml
@@ -21,7 +21,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/selected_products_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="@+id/send_email_button"
         app:layout_constraintVertical_bias="0.191"
