--- a/app/src/main/res/layout/selected_products_activity.xml
+++ b/app/src/main/res/layout/selected_products_activity.xml
@@ -11,21 +11,22 @@
         android:id="@+id/send_email_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="652dp"
+        android:layout_marginTop="16dp"
         android:text="Send Email"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.859"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/selected_products_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/send_email_button"
-        app:layout_constraintVertical_bias="0.191"
-        tools:layout_editor_absoluteX="-160dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/send_email_button"
+        app:layout_constraintVertical_bias="0.567">
 
     </androidx.recyclerview.widget.RecyclerView>
 
